<resources>
    <string name="app_name">Movie Buff</string>
    <string name="title_activity_movies">MoviesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kunal Farmah</string>
    <string name="nav_header_subtitle">kunalfarmah98@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="title_activity_main">Popular Movies</string>
    <string name="action_sort">Sort By</string>
    <string name="about">About</string>
    <string name="rating">rating</string>
    <string name="release_date">Release Date</string>
    <string name="language">language</string>
    <string name="runtime">runtime</string>
    <string name="overview">Overview:</string>
    <string name="images">Images</string>
    <string name="reviews">Reviews</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="by_release_date">by Release Date</string>
    <string name="by_popularity">by Popularity</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="thriller">Thriller</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="all">All</string>
    <string name="by_rating">by Rating</string>
    <string name="appVersion">1.0.2-datastore-synchronous</string>

    <string-array name="genres">
        <item>Action</item>>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Horror</item>
        <item>Thriller</item>
        <item>Mystery</item>
        <item>Sci-Fi</item>
    </string-array>
</resources>