<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/genre_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <HorizontalScrollView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8sp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/all"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/action"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/adventure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_adventure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/adventure"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/comedy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_comedy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/comedy"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/drama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_drama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/drama"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/horror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_horror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/horror"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mystery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_mystery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/mystery"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/thriller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_thriller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/thriller"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/scifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/name_scifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/sci_fi"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>